--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,12 @@ tokio = { version = "1.33.0", default-features = false }
 tracing = "0.1.40"
 validator = { version = "0.19" }
 
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["ws"] }
+futures-util = "0.3"
 include_dir = "0.7"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
 uuid = { version = "1.6.0", features = ["v4"] }
+once_cell = "1.19.0"
 
 # view engine i18n
 fluent-templates = { version = "0.8.0", features = ["tera"] }
