--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,8 +70,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Normalize image owner
-        run: echo "IMAGE_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
+      - name: Normalize image names
+        run: |
+          echo "IMAGE_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
+          echo "IMAGE_NAME_LOWER=${LOCALTUBE_IMAGE_NAME,,}" >> "$GITHUB_ENV"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -88,7 +90,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.LOCALTUBE_IMAGE_NAME }}
+          images: ${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.IMAGE_NAME_LOWER }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha,format=short
@@ -115,7 +117,7 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.LOCALTUBE_IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,name=${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.IMAGE_NAME_LOWER }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=linux-amd64
           cache-to: type=gha,mode=max,scope=linux-amd64
 
@@ -135,8 +137,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Normalize image owner
-        run: echo "IMAGE_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
+      - name: Normalize image names
+        run: |
+          echo "IMAGE_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
+          echo "IMAGE_NAME_LOWER=${LOCALTUBE_IMAGE_NAME,,}" >> "$GITHUB_ENV"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -152,7 +156,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.LOCALTUBE_IMAGE_NAME }}
+          images: ${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.IMAGE_NAME_LOWER }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha,format=short
@@ -165,7 +169,7 @@ jobs:
           file: Dockerfile
           platforms: linux/arm64
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.LOCALTUBE_IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,name=${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.IMAGE_NAME_LOWER }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=linux-arm64
           cache-to: type=gha,mode=max,scope=linux-arm64
 
@@ -180,8 +184,10 @@ jobs:
       packages: write
 
     steps:
-      - name: Normalize image owner
-        run: echo "IMAGE_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
+      - name: Normalize image names
+        run: |
+          echo "IMAGE_OWNER_LOWER=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_ENV"
+          echo "IMAGE_NAME_LOWER=${LOCALTUBE_IMAGE_NAME,,}" >> "$GITHUB_ENV"
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -194,7 +200,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.LOCALTUBE_IMAGE_NAME }}
+          images: ${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.IMAGE_NAME_LOWER }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha,format=short
@@ -204,7 +210,7 @@ jobs:
 
       - name: Create and push manifest
         run: |
-          registry_image="${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.LOCALTUBE_IMAGE_NAME }}"
+          registry_image="${{ env.LOCALTUBE_REGISTRY }}/${{ env.IMAGE_OWNER_LOWER }}/${{ env.IMAGE_NAME_LOWER }}"
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             "${registry_image}@${{ needs.build-amd64.outputs.digest }}" \
             "${registry_image}@${{ needs.build-arm64.outputs.digest }}"
